CHANGELOG
=========

MyKnowledgeBase version 4.7 - january 2017
- added support for hentry tags
- updated files content-postmeta, content-list and single
- file style: adjusted css for inputs
- file style: improved comments display
- file custom-editor-style: removed theme colors (because theme can be customized)
- several small adjustments

MyKnowledgeBase version 4.6 - october 2016
- added page template with left sidebar
- knowledgebase page template: you can now add content (text) too
- customizer: show or hide page title on knowledgebase page
- several small adjustments
- new screenshot

MyKnowledgeBase version 4.5 - august 2016
- customizer: textual changes
- updated file functions

MyKnowledgeBase version 4.4 - august 2016
- customizer: order posts by date or name
- updated files page-knowledge-three and page-knowledge-four

MyKnowledgeBase version 4.3 - august 2016
- file functions: bugfix

MyKnowledgeBase version 4.2 - august 2016
- customizer: exclude categories
- updated file functions
- updated files page-knowledge-three and page-knowledge-four
- file content-postmeta-single: display post format too
- updated text strings
- several small adjustments
- new screenshot

MyKnowledgeBase version 4.1 - august 2016
- cleanup: removed unnecessary white space from several files
- file style: removed unnecessary id tags from several strings
- file style: updated mobile stylesheet
- file style and custom-editor-style: several small adjustments
- file functions: updated feature for html5 support in ie 8 and older

MyKnowledgeBase version 4.0 - june 2016
- files style and custom-editor-style: resized all headings (including line-height)
- file style: removed line-height from several elements

MyKnowledgeBase version 3.9 - may 2016
- added file content-none 
- files 404, archive, index and search: relocated nothing found to separate file
- updated file index
- renamed both postmetadata files
- several small adjustments

MyKnowledgeBase version 3.8 - may 2016