@@ -1,7 +1,7 @@
 /*
 Theme Name: MyKnowledgeBase
 Theme URI: http://www.guidovanderleest.nl/myknowledgebase
-Version: 4.7
+Version: 4.8
 Author: Guido van der Leest
 Author URI: http://www.guidovanderleest.nl
 Description: MyKnowledgeBase is a free, clean, minimalistic, responsive, mobile-friendly WordPress theme. Create a 3 or 4 column Knowledge Base, Bulletin Board, FAQ, Wiki or Link Portal with a custom page template and using the default categories and posts. Features: sidebar, homepage widgets, footer widgets, custom header image, custom background, custom logo to replace site title and tagline, full width page template, dropdown navigation. For more info please check readme file. Enjoy.
@@ -101,8 +101,9 @@ cite, em, abbr, acronym {font-style:italic;}
 code, kbd, samp, var {font-family:monospace, monospace;}
 pre {margin:10px 0; padding:5px 10px; white-space:pre-wrap; border:1px solid #eee;}
 blockquote, q {margin:10px 0; padding:0 0 0 20px; display:block; font-size:1.2em; line-height:1.5em; font-style:italic; border-left:2px solid #08a0ff;}
-address {margin:10px 0; font-size:1.2em; line-height:1.5em; font-style:italic;}
+address {margin:10px 0; font-style:italic;}
 p {margin:0 0 10px;}
+hr {height:1px; background:#eee; border:0;}
 
 
 /* ALIGNMENTS */
@@ -126,23 +127,24 @@ dd {margin:0 0 0 20px;}
 
 
 /* INPUTS */
-input, select, textarea {-webkit-appearance:none; -moz-appearance:none; border:1px solid #eee; padding:2px 5px; background:none; font-size:1em; font-family:'Open Sans', sans-serif;}
+input, select, textarea {-webkit-appearance:none; -moz-appearance:none; border:1px solid #eee; padding:2px 5px; background:none; color:#333; font-size:1em; font-family:'Open Sans', sans-serif;}
 input[type="submit"], input[type="reset"], input[type="button"], button {cursor:pointer; border:0; padding:2px 5px; background:#08a0ff; color:#fff;}
 input[type="submit"]:hover, input[type="reset"]:hover, input[type="button"]:hover, button:hover {background:#333;}
 input[type="checkbox"] {-webkit-appearance:checkbox; -moz-appearance:checkbox;}
 input[type="radio"] {-webkit-appearance:radio; -moz-appearance:radio;}
-select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist;}
-select option {background:#fff; color:#333;} 
+select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist; background:#f8f8f8; color:#333;}
 button {font-size:1em; font-family:'Open Sans', sans-serif;}
 
 
 /* INPUTS ON BLUE BACKGROUND */
-#header-second input, #header-second select, #header-second textarea {border:1px solid #fff; color:#fff;}
-#header-second input[type="submit"], #header-second input[type="reset"], #header-second input[type="button"], #header-second button {border:0; background:#fff; color:#333;}
+#header-second input, #header-second textarea {border:1px solid #eee; color:#eee;}
+#header-second select {border:1px solid #eee;} 
+#header-second input[type="submit"], #header-second input[type="reset"], #header-second input[type="button"], #header-second button {border:0; background:#eee; color:#333;}
 #header-second input[type="submit"]:hover, #header-second input[type="reset"]:hover, #header-second input[type="button"]:hover, #header-second button:hover {background:#333; color:#fff;}
 
-#footer input, #footer select, #footer textarea {border:1px solid #fff; color:#fff;}
-#footer input[type="submit"], #footer input[type="reset"], #footer input[type="button"], #footer button {border:0; background:#fff; color:#333;}
+#footer input, #footer textarea {border:1px solid #eee; color:#eee;}
+#footer select {border:1px solid #eee;} 
+#footer input[type="submit"], #footer input[type="reset"], #footer input[type="button"], #footer button {border:0; background:#eee; color:#333;}
 #footer input[type="submit"]:hover, #footer input[type="reset"]:hover, #footer input[type="button"]:hover, #footer button:hover {background:#333; color:#fff;}
 
 
@@ -205,8 +207,8 @@ button {font-size:1em; font-family:'Open Sans', sans-serif;}
 
 
 /* KNOWLEDGE BASE TEMPLATE */
-#categories-three {clear:both; float:left; width:100%;}
-#categories-four {clear:both; float:left; width:100%;}
+#categories-three {width:100%; clear:both; float:left;}
+#categories-four {width:100%; clear:both; float:left;}
 
 #categories-three .cat-list {width:30%; margin:0 2% 20px 0; padding:10px 1%; float:left; background:#f8f8f8;}
 #categories-four .cat-list {width:21.5%; margin:0 2% 20px 0; padding:10px 1%; float:left; background:#f8f8f8;}
@@ -223,8 +225,8 @@ button {font-size:1em; font-family:'Open Sans', sans-serif;}
 
 /* PAGE */
 .page-title {clear:both; padding:0 0 10px;}
-.archive-description {display:block; font-style:italic;}
-.pagelink {clear:both; display:block; padding:20px 0 10px;}
+.archive-description {width:100%; clear:both; float:left; font-style:italic;}
+.pagelink {width:100%; clear:both; float:left; display:block; padding:20px 0 10px;}
 
 
 /* POST */
@@ -232,18 +234,17 @@ button {font-size:1em; font-family:'Open Sans', sans-serif;}
 .post-title {clear:both;}
 .post-title a:hover {color:#333; text-decoration:none;}
 .post-title-single {clear:both;}
-.sticky-title {clear:both; display:block; text-align:center; margin:10px 0; padding:2px 0; border-top:1px solid #eee; border-bottom:1px solid #eee;}
-.postmetadata {clear:both; display:block; margin:20px 0; padding:5px 10px; background:#f8f8f8; border:1px solid #eee;}
-.more {width:100%; clear:both; display:block; float:left; margin:20px 0; padding:0 0 20px; border-bottom:1px solid #eee;}
+.sticky-title {clear:both; text-align:center; margin:10px 0 20px; padding:2px 0; border-top:1px solid #eee; border-bottom:1px solid #eee;}
+.postmetadata {width:100%; clear:both; float:left; display:block; margin:20px 0; padding:5px 10px; background:#f8f8f8; border:1px solid #eee; box-sizing:border-box;}
+.more {width:100%; clear:both; float:left; display:block; margin:20px 0; padding:0 0 20px; border-bottom:1px solid #eee;}
 a.readmore {float:right; padding:2px 10px; background:#08a0ff; color:#fff; text-decoration:none;}
 a.readmore:hover {background:#333; text-decoration:none;}
 
 
 /* POST FORMATS */
-.format-aside .post-title, .format-status .post-title, .format-image .post-title, .format-video .post-title, .format-gallery .post-title, .format-audio .post-title {font-size:1.45em;}
-.format-aside .post-title-single, .format-status .post-title-single, .format-image .post-title-single, .format-video .post-title-single, .format-gallery .post-title-single, .format-audio .post-title-single {font-size:1.45em;}
+.format-aside .post-title, .format-image .post-title, .format-video .post-title, .format-gallery .post-title, .format-audio .post-title {font-size:1.45em;}
+.format-aside .post-title-single, .format-image .post-title-single, .format-video .post-title-single, .format-gallery .post-title-single, .format-audio .post-title-single {font-size:1.45em;}
 .format-image .postmetadata, .format-video .postmetadata, .format-gallery .postmetadata, .format-audio .postmetadata {font-style:italic;}
-.format-status .avatar {width:96px; float:left; margin:0.4em 1em 0.4em 0; border-radius:5px;}
 
 
 /* POST NAV */
@@ -296,7 +297,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 
 
 /* COMMENTS RESPOND */
-#respond {width:100%; clear:both;}
+#respond {width:100%; clear:both; float:left;}
 .comment-form label {padding:0 0 5px; display:block;}
 .comment-form input, .comment-form textarea {width:80%;}
 .comment-form input[type="submit"] {width:auto;}
@@ -318,7 +319,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 /* FOOTER */
 #footer {width:96%; clear:both; float:left; padding:0 2%; background:#08a0ff; color:#fff;}
 #footer a {color:#fff;}
-.site-info {text-align:center; clear:both; padding:15px 0;}
+.site-info {clear:both; text-align:center; padding:15px 0;}
 
 
 /* FOOTER WIDGET AREA */
@@ -349,7 +350,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 	/* HEADER FIRST MENU */
 	.nav-head ul {display:none;} 
 	.nav-head {width:100%; margin:5px 0 0;}
-	.nav-head select {display:block; width:100%; height:35px; margin:0 auto 0; font-size:1em; line-height:1.2em; color:#fff; background:#08a0ff; border:0;} 
+	.nav-head select {width:100%; display:block; margin:0 auto 0; font-size:1em; line-height:1.2em;} 
 
 	/* HEADER SECOND HOMEPAGE IMAGE */
 	.image-homepage {width:100%; margin:0 0 10px;}
@@ -382,9 +383,6 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 	/* HEADINGS */
 	.post-title, .page-title, .post-title-single {font-size:1.80em;}
 	.widgettitle, .searchbar-title, .comments-title, .comment-reply-title, .no-comments {font-size:1.45em;}
-
-	/* POST FORMATS */
-	.format-status .avatar {margin:0.3em 0.5em 0.3em 0;}
 
 	/* IMAGES */
 	.wp-post-image, .single-image, .single-image-right {width:50%; float:left; margin:0.3em 0.5em 0.3em 0;}
